--- a/src/client/style.css
+++ b/src/client/style.css
@@ -12,22 +12,9 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  /* place-items: center; */
-  min-width: 320px;
-  /* min-height: 100vh; */
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 #app {
   margin: 0 auto;
-  padding: 1rem;
+  max-width: 800px;
 }
 
 @media (prefers-color-scheme: light) {
