--- a/src/client/style.css
+++ b/src/client/style.css
@@ -12,9 +12,8 @@
   -webkit-text-size-adjust: 100%;
 }
 
-#app {
-  margin: 0 auto;
-  max-width: 800px;
+body {
+  margin: 0;
 }
 
 @media (prefers-color-scheme: light) {
